src/test/ui/symbol-names/basic.v0.stderr
error: symbol-name(_RNvCsCRATE_HASH_5basic4main)
  --> $DIR/basic.rs:8:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: demangling(basic[b751b4a00e2291d9]::main)
  --> $DIR/basic.rs:8:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(basic::main)
  --> $DIR/basic.rs:8:1
   |
LL | #[rustc_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^

error: def-path(main)
  --> $DIR/basic.rs:15:1
   |
LL | #[rustc_def_path]
   | ^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

